--- a/.travis.yml
+++ b/.travis.yml
@@ -103,15 +103,12 @@ script:
   - .ci/ci-configure.sh "$CI_BUILD_TYPE"
   - .ci/ci-setup-ccache.sh "$CI_BUILD_TYPE"
   - .ci/ci-make.sh "$CI_BUILD_TYPE"
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$CI_BUILD_TYPE" == "" ]]; then
-          .ci/ci-make-benchmark.sh "$CI_BUILD_TYPE"
-      fi
   - .ci/ci-make-install.sh "$CI_BUILD_TYPE"
+  - .ci/ci-make-benchmark.sh "$CI_BUILD_TYPE"
   - .ci/ci-make-check.sh "$CI_BUILD_TYPE"
   - .ci/ci-make-distcheck.sh "$CI_BUILD_TYPE"
-  - |
   - .ci/ci-build-test.sh "$CI_BUILD_TYPE"
+
 before_cache:
   - .ci/ci-ccache-stats.sh
   - |
