benchmarks: also increase eo benchmark timeout to 60s
I have seen it running into a timeout on Travis with the default 30s.

--- a/src/benchmarks/eo/meson.build
+++ b/src/benchmarks/eo/meson.build
@@ -14,5 +14,6 @@ eo_bench = executable('eo_bench',
 )
 
 benchmark('eo', eo_bench,
-  args: run_command('date','+%F_%s').stdout()
+  args: run_command('date','+%F_%s').stdout(),
+  timeout: 60
 )
